# ros2-panda-control

./: Dockerfile  README.md  docker-compose.yaml
panda-control-ui/: package-lock.json  package.json
panda-control-ui/src/: App.js
robot_ws/src/panda_control/: CMakeLists.txt  package.xml
robot_ws/src/panda_control/launch/: panda_control.launch.py
robot_ws/src/panda_control/panda_control/: backend.py  virtual_joy_to_move_command.py
robot_ws/src/panda_control/src/: current_pose_publisher.cpp  move_to_pose_server.cpp  simple_control_server.cpp
robot_ws/src/panda_control_msgs/: CMakeLists.txt  package.xml
robot_ws/src/panda_ign_moveit2/panda_description/: CMakeLists.txt
robot_ws/src/panda_ign_moveit2/panda_description/panda/: model.sdf
robot_ws/src/panda_ign_moveit2/panda_description/urdf/: panda.urdf
robot_ws/src/panda_ign_moveit2/panda_moveit_config/config/: controllers_effort.yaml
robot_ws/src/panda_ign_moveit2/panda_moveit_config/srdf/: panda.srdf
